--- a/aws/dev/apps/values.yaml
+++ b/aws/dev/apps/values.yaml
@@ -12,5 +12,6 @@ applications:
     source_ref: main
     enabled: true
     source_path: common/cadence
+    destination: prod-infra
     helm_values:
       - ../../aws/dev/apps/cadence/values.yaml
