--- a/aws/dev/values.yaml
+++ b/aws/dev/values.yaml
@@ -1,12 +1,13 @@
 # ArgoCD: projects-infra
 source: https://github.com/fseidler/helm-charts.git
+release: base
 applications:
 # #################################################################
 #
 #  base-aws-dev
 #
 # #################################################################
-  - name: base-aws-dev-apps
+  - name: aws-dev-apps
     source_ref: main
     enabled: true
     source_path: aws/dev/apps
