--- a/common/cadence/templates/server-service.yaml
+++ b/common/cadence/templates/server-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cadence-frontend
+  namespace: {{ $.Values.namespace }}
   labels:
     app: cadence
     component: frontend
@@ -27,6 +28,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cadence-{{ $service }}-headless
+  namespace: {{ $.Values.namespace }}
   labels:
     app: cadence
     component: {{ $service }}
