--- a/common/cadence/templates/cadence-web-deployment.yaml
+++ b/common/cadence/templates/cadence-web-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: cadence-web
     {{- include "cadence.commonlabels" . | nindent 4 }}
+    namespace: {{ $.Values.namespace }}
 spec:
   replicas: 1
   selector:
@@ -36,6 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cadence-web-service
+  namespace: {{ $.Values.namespace }}
 spec:
   selector:
     app: cadence-web
