--- a/common/cadence/templates/server-configmap.yaml
+++ b/common/cadence/templates/server-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cadence-configmap
+  namespace: {{ $.Values.namespace }}
   labels:
     {{- include "cadence.commonlabels" . | nindent 4 }}
 data:
