--- a/common/cadence/templates/server-deployment.yaml
+++ b/common/cadence/templates/server-deployment.yaml
@@ -5,6 +5,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cadence-{{ $service }}
+  namespace: {{ $.Values.namespace }}
   labels:
     app: cadence
     component: {{ $service }}
